# MCCC008-23_IA

./: .gitignore
app/: .dockerignore  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
app/api/v1/: prediction.py
app/core/config/: settings.py
app/data/: .gitkeep  modelo_traits.joblib  traits_dataset_50x200.csv  traits_labels.json  traits_thresholds.npy
app/schemas/: prediction.py
app/services/: prediction_service.py
app/templates/: index.html
